# megengine_cpp_training_example

./: .gitignore  .gitmodules  CMakeLists.txt  README-CN.md  README.md
helper/: helper.cpp  helper.h
mainfile/: main.cpp  train.h
mnist/: dataview.h  download.py  model.cpp  model.h  train.cpp
scripts/: cross_build_android_arm_train.sh  cross_build_ios_arm_train.sh  cross_build_linux_arm_train.sh  host_build.sh  utils.sh
